--- a/check.html
+++ b/check.html
@@ -16,7 +16,8 @@
             if(getCity == "none"){
                 window.close();
                 //window.opener.focus();
-                window.parent.focus();
+                //window.parent.focus();
+                window.opener.location.reload();
             }else{
                 window.location.href = 'http://google.com/search?q=Clima '+ getCity.toLowerCase();
             }
