--- a/amp-carousel/index.html
+++ b/amp-carousel/index.html
@@ -17,11 +17,11 @@
 </head>
 
 <body>
-    <amp-carousel width="400" height="300" layout="responsive" type="slides">
+    <!-- <amp-carousel width="400" height="300" layout="responsive" type="slides">
         <amp-img src="https://ampbyexample.com/img/image1.jpg" width="400" height="300" layout="responsive" alt="a sample image"></amp-img>
         <amp-img src="https://ampbyexample.com/img/image2.jpg" width="400" height="300" layout="responsive" alt="another sample image"></amp-img>
         <amp-img src="https://ampbyexample.com/img/image3.jpg" width="400" height="300" layout="responsive" alt="and another sample image"></amp-img>
-    </amp-carousel>
+    </amp-carousel> -->
 
     <amp-carousel id="custom-button" width="400" height="300" layout="responsive" type="slides" autoplay delay="2000">
         <amp-img src="https://ampbyexample.com/img/image1.jpg" width="400" height="300" layout="responsive" alt="a sample image"></amp-img>
