--- a/amp-carousel/index.html
+++ b/amp-carousel/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <!-- <amp-carousel width="400" height="300" layout="responsive" type="slides">
+    <amp-carousel width="400" height="300" layout="responsive" type="slides" on="slideChange:AMP.setState({selectedSlide: event.index}),AMP.navigateTo(url='http://elcomercio.pe/lima/sucesos/alianza-lima-encuentra-estadio-matute-invasion-evangelicos-fotos-noticia-555830?foto=2')">
         <amp-img src="https://ampbyexample.com/img/image1.jpg" width="400" height="300" layout="responsive" alt="a sample image"></amp-img>
         <amp-img src="https://ampbyexample.com/img/image2.jpg" width="400" height="300" layout="responsive" alt="another sample image"></amp-img>
         <amp-img src="https://ampbyexample.com/img/image3.jpg" width="400" height="300" layout="responsive" alt="and another sample image"></amp-img>
-    </amp-carousel> -->
+    </amp-carousel>
 
     <!-- <amp-carousel id="custom-button" width="400" height="300" layout="responsive" type="slides" autoplay delay="2000">
         <amp-img src="https://ampbyexample.com/img/image1.jpg" width="400" height="300" layout="responsive" alt="a sample image"></amp-img>
@@ -32,7 +32,7 @@
         <amp-img src="https://ampbyexample.com/img/image3.jpg" width="400" height="300" layout="responsive" alt="and another sample image"></amp-img>
     </amp-carousel> -->
 
-    <amp-carousel [slide]="selectedSlide" class="media gallery i-amphtml-layout-responsive i-amphtml-layout-size-defined i-amphtml-element i-amphtml-slidescroll i-amphtml-layout"
+    <!-- <amp-carousel [slide]="selectedSlide" class="media gallery i-amphtml-layout-responsive i-amphtml-layout-size-defined i-amphtml-element i-amphtml-slidescroll i-amphtml-layout"
         height="470" i-amphtml-layout="responsive" layout="responsive" on="slideChange:AMP.setState({selectedSlide: event.index}),AMP.navigateTo(url='http://elcomercio.pe/lima/sucesos/alianza-lima-encuentra-estadio-matute-invasion-evangelicos-fotos-noticia-555830?foto=2')"
         type="slides" width="600">
 
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-    </amp-carousel>
+    </amp-carousel> -->
 </body>
 
 </html>
