--- a/amp-carousel/index.html
+++ b/amp-carousel/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+
+    <button on="tap:AMP.navigateTo(url='http://google.com')">google.com</button>
+
     <amp-carousel width="400" height="300" layout="responsive" type="slides" on="slideChange:AMP.setState({selectedSlide: event.index}),AMP.navigateTo(url='http://elcomercio.pe/lima/sucesos/alianza-lima-encuentra-estadio-matute-invasion-evangelicos-fotos-noticia-555830?foto=2')">
         <amp-img src="https://ampbyexample.com/img/image1.jpg" width="400" height="300" layout="responsive" alt="a sample image"></amp-img>
         <amp-img src="https://ampbyexample.com/img/image2.jpg" width="400" height="300" layout="responsive" alt="another sample image"></amp-img>
