--- a/amp-carousel/index.html
+++ b/amp-carousel/index.html
@@ -17,7 +17,8 @@
 
     <button on="tap:AMP.navigateTo(url='http://google.com')">google.com</button>
 
-    <amp-carousel width="400" height="300" layout="responsive" type="slides" on="slideChange:AMP.setState({selectedSlide: event.index}),AMP.navigateTo(url='http://elcomercio.pe/lima/sucesos/alianza-lima-encuentra-estadio-matute-invasion-evangelicos-fotos-noticia-555830?foto=2')">
+    <!-- <amp-carousel width="400" height="300" layout="responsive" type="slides" on="slideChange:AMP.setState({selectedSlide: event.index}),AMP.navigateTo(url='http://elcomercio.pe/lima/sucesos/alianza-lima-encuentra-estadio-matute-invasion-evangelicos-fotos-noticia-555830?foto=2')"> -->
+    <amp-carousel width="400" height="300" layout="responsive" type="slides" on="tap:AMP.navigateTo(url='http://google.com')">
         <amp-img src="https://ampbyexample.com/img/image1.jpg" width="400" height="300" layout="responsive" alt="a sample image"></amp-img>
         <amp-img src="https://ampbyexample.com/img/image2.jpg" width="400" height="300" layout="responsive" alt="another sample image"></amp-img>
         <amp-img src="https://ampbyexample.com/img/image3.jpg" width="400" height="300" layout="responsive" alt="and another sample image"></amp-img>
