--- a/post-message/controller.html
+++ b/post-message/controller.html
@@ -15,7 +15,7 @@
 		<button id="send">Send Message</button>
 	</p>
 
-	<iframe id="receiver" src="http://demos.matt-west.com/post-message/receiver.html" width="400" height="200">
+	<iframe id="receiver" src="http://jab.pe/mpp/view/test/receiver.html" width="400" height="200">
 	  <p>Your browser does not support iframes.</p>
 	</iframe>
 	
