--- a/postmessageie/launcher.html
+++ b/postmessageie/launcher.html
@@ -6,7 +6,7 @@
         var w = window.open("", "theWnd", "resizeable,status,width=400,height=300"),
             i = w.document.createElement("iframe");
 
-        i.src = "http://jorgeduenas.com/postmessageie/remote.html";
+        i.src = "https://jorgeduenas.com/postmessageie/remote.html";
         w.document.body.appendChild(i);
 
         w.addEventListener("message", function (e) {
