--- a/postjquery/index.html
+++ b/postjquery/index.html
@@ -41,7 +41,10 @@
     <script>
         $(function () {
             $('button').click(function () {
-                window.open('children.html', 'testwindow');
+                var left = (screen.width/2)-(800/2);
+                var top = (screen.height/2)-(600/2);
+                window.open('children.html', 'Login Facebook', 'toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, resizable=no, copyhistory=no, width=780, height=640, top='+top+', left='+left);
+                //window.open('children.html', 'testwindow');
                 window.addEventListener("message", function (event) {
                     $('#result').html("Child window says: " + event.data);
                 }, false);
