--- a/postjquery/children.html
+++ b/postjquery/children.html
@@ -29,7 +29,7 @@
 </footer> 
 <script>
 window.addEventListener('load', function() {
-  window.opener.postMessage('Hi There!','*');
+  window.opener.postMessage('Hola hola hola!','*');
 });
 </script>
 </body>
