--- a/postpopup/index.html
+++ b/postpopup/index.html
@@ -20,9 +20,9 @@
     // Do we trust the sender of this message?  (might be
     // different from what we originally opened, for example).
     //if (event.origin !== "http://example.com")
-    if (event.origin !== "https://jab.pe")
-      return;
-
+    if (event.origin !== "https://jab.pe"){return;}
+    
+    console.log(event)
     // event.source is popup
     // event.data is "hi there yourself!  the secret response is: rheeeeet!"
   }
