--- a/postpopup/index.html
+++ b/postpopup/index.html
@@ -9,18 +9,18 @@
 
   // This does nothing, assuming the window hasn't changed its location.
   //popup.postMessage("The user is 'bob' and the password is 'secret'", "https://secure.example.net");
-  popup.postMessage("The user is 'bob' and the password is 'secret'", "*");
+  popup.postMessage("The user is 'bob' and the password is 'secret'", "https://jorgeduenas.com");
 
   // This will successfully queue a message to be sent to the popup, assuming
   // the window hasn't changed its location.
   //popup.postMessage("hello there!", "http://example.com");
-  popup.postMessage("hello there!", "*");
+  popup.postMessage("hello there!", "https://jorgeduenas.com");
 
   function receiveMessage(event) {
     // Do we trust the sender of this message?  (might be
     // different from what we originally opened, for example).
     //if (event.origin !== "http://example.com")
-    if (event.origin !== "https://jab.pe"){return;}
+    if (event.origin !== "https://jorgeduenas.com"){return;}
     
     console.log(event)
     // event.source is popup
