--- a/postpopup/popup.html
+++ b/postpopup/popup.html
@@ -7,7 +7,7 @@
     function receiveMessage(event) {
         // Do we trust the sender of this message?
         //if (event.origin !== "http://example.com:8080")
-        if (event.origin !== "https://jorgeduenas.com")
+        if (event.origin !== "https://jab.pe")
             return;
 
         // event.source is window.opener
