--- a/postmessageie/launcher.html
+++ b/postmessageie/launcher.html
@@ -3,7 +3,7 @@
     <title>postMessage launcher</title>
     <script>
       function openWnd() {
-        var w = window.open("", "theWnd", "resizeable,status,width=400,height=300"),
+        var w = window.open("https://jorgeduenas.com/postmessageie/remote.html", "theWnd", "resizeable,status,width=400,height=300"),
             i = w.document.createElement("iframe");
 
         i.src = "https://jorgeduenas.com/postmessageie/remote.html";
@@ -16,14 +16,10 @@
           e.source.postMessage("reply", e.origin);
         });
       }
-
-
-
-
       
       var left = (screen.width/2)-(800/2);
             var top = (screen.height/2)-(600/2);
-            var w = window.open('https://pre.ecoid.pe/mpp/facebook/login/', 'Login Facebook', 'toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, resizable=no, copyhistory=no, width=780, height=640, top='+top+', left='+left);
+            var w = window.open('', 'Login Facebook', 'toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, resizable=no, copyhistory=no, width=780, height=640, top='+top+', left='+left);
           
       w.addEventListener("message", function (e) {
         console.log("message from " + e.origin + ": " + e.data);
