--- a/mpppostmessage/popup.html
+++ b/mpppostmessage/popup.html
@@ -8,14 +8,11 @@
 </head>
 <body>
     <script>
-        //window.opener.postMessage({"accessToken": "213123123123123", "emailUser": "cocotopia@gmail.com", "providerSource":"FB" }, 'https://jorgeduenas.com');
 
-        //window.top.postMessage({"accessToken": "213123123123123", "emailUser": "cocotopia@gmail.com", "providerSource":"FB" }, 'https://jorgeduenas.com');
-
-        //window.parent.postMessage({"accessToken": "213123123123123", "emailUser": "cocotopia@gmail.com", "providerSource":"FB" }, 'https://jorgeduenas.com');
-
-         window.parent.postMessage({"accessToken": "213123123123123", "emailUser": "cocotopia@gmail.com", "providerSource":"FB" }, '*');
-
+        var eventMethod = window.opener ? "opener" : "parent";
+        var eventer = window[eventMethod];
+        eventer.postMessage({"accessToken": "213123123123123", "emailUser": "cocotopia@gmail.com", "providerSource":"FB" }, '*');
+        
         setTimeout(function(){
             window.close();
         }, 3000);
