--- a/mpppostmessage/index.html
+++ b/mpppostmessage/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<iframe src="https://jab.pe/mpp/test/popup.html"></iframe>
+<!-- <iframe src="https://jab.pe/mpp/test/popup.html"></iframe> -->
 
 <button onclick="openPopUp()">dale!</button>
 
@@ -17,6 +17,12 @@
     function openPopUp(){
         var left = (screen.width/2)-(800/2);
         var top = (screen.height/2)-(600/2);
+
+        var iframe = document.createElement('iframe');
+        iframe.src = 'https://jab.pe/mpp/test/popup.html';
+        iframe.style.display = 'none';
+        document.body.appendChild(iframe);
+
         return window.open('https://jab.pe/mpp/test/popup.html', 'Login Facebook', 'toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, resizable=no, copyhistory=no, width=780, height=640, top='+top+', left='+left);
     }
 
