--- a/firestarter/index.html
+++ b/firestarter/index.html
@@ -1,14 +1,19 @@
-<!DOCTYPE html><html lang="en"><head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+        crossorigin="anonymous">
 
     <meta charset="utf-8">
     <title>Reto Ecomedia</title>
-    <base href="/">
+    <base href="firestarter/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.e2c4d6586d512aa55361.css"></head>
+    <link rel="stylesheet" href="styles.e2c4d6586d512aa55361.css">
+</head>
 
 <body>
 
@@ -19,4 +24,9 @@
     </div>
 
 
-<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.2903ad11212d7d797800.js"></script><script type="text/javascript" src="main.51daf661fe9eb344f293.js"></script></body></html>
+    <script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script>
+    <script type="text/javascript" src="polyfills.2903ad11212d7d797800.js"></script>
+    <script type="text/javascript" src="main.51daf661fe9eb344f293.js"></script>
+</body>
+
+</html>
