--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>@cocotopia desde ramita 02</title>
+	<title>@cocotopia desde ramita 02 OK</title>
 </head>
 <body>
 	<h2>El tiempo</h2>
