--- a/login-google/index.html
+++ b/login-google/index.html
@@ -17,7 +17,7 @@
       }
       window.onload = function () {
         google.accounts.id.initialize({
-          client_id: "{{id_google}}",
+          client_id: "519633312892-3kpve55sqi0k1nq2n4f9suag9sji41jh.apps.googleusercontent.com",
           callback: handleCredentialResponse,
           // ux_mode: "redirect",
           // login_uri: "{{domain}}/mpp/google/login/",
@@ -28,7 +28,6 @@
         );
         // google.accounts.id.prompt(); // also display the One Tap dialog
       };
-      console.log("{{domain}}/mpp/google/login/");
     </script>
     <div id="buttonDiv"></div>
   </body>
