--- a/login-google/index.html
+++ b/login-google/index.html
@@ -17,9 +17,10 @@
       }
       window.onload = function () {
         google.accounts.id.initialize({
-          client_id: "519633312892-3kpve55sqi0k1nq2n4f9suag9sji41jh.apps.googleusercontent.com",
+          client_id:
+            "519633312892-3kpve55sqi0k1nq2n4f9suag9sji41jh.apps.googleusercontent.com",
           callback: handleCredentialResponse,
-          // ux_mode: "redirect",
+          ux_mode: "redirect",
           // login_uri: "{{domain}}/mpp/google/login/",
         });
         google.accounts.id.renderButton(
