--- a/login-google/index.html
+++ b/login-google/index.html
@@ -21,7 +21,7 @@
             "519633312892-3kpve55sqi0k1nq2n4f9suag9sji41jh.apps.googleusercontent.com",
           callback: handleCredentialResponse,
           ux_mode: "redirect",
-          // login_uri: "{{domain}}/mpp/google/login/",
+          login_uri: "https://xn--jorgedueas-09a.com/login-google/",
         });
         google.accounts.id.renderButton(
           document.getElementById("buttonDiv"),
