update: test login google

--- a/login-google/index.html
+++ b/login-google/index.html
@@ -20,7 +20,7 @@
           client_id:
             "519633312892-3kpve55sqi0k1nq2n4f9suag9sji41jh.apps.googleusercontent.com",
           callback: handleCredentialResponse,
-          // ux_mode: "redirect",
+          ux_mode: "redirect",
           // login_uri: "https://pre.ecoid.pe/mpp/google/login/",
         });
         google.accounts.id.renderButton(
