update: test login google

--- a/login-google/index.html
+++ b/login-google/index.html
@@ -20,8 +20,8 @@
           client_id:
             "519633312892-3kpve55sqi0k1nq2n4f9suag9sji41jh.apps.googleusercontent.com",
           callback: handleCredentialResponse,
-          ux_mode: "redirect",
-          login_uri: "https://xn--jorgedueas-09a.com/login-google/",
+        //   ux_mode: "redirect",
+        //   login_uri: "https://xn--jorgedueas-09a.com/login-google/",
         });
         google.accounts.id.renderButton(
           document.getElementById("buttonDiv"),
