--- a/login-google/index.html
+++ b/login-google/index.html
@@ -13,6 +13,7 @@
   <body>
     <script>
       function handleCredentialResponse(response) {
+        console.log(response);
         console.log("Encoded JWT ID token: " + response.credential);
       }
       window.onload = function () {
@@ -20,12 +21,12 @@
           client_id:
             "519633312892-3kpve55sqi0k1nq2n4f9suag9sji41jh.apps.googleusercontent.com",
           callback: handleCredentialResponse,
-        //   ux_mode: "redirect",
-        //   login_uri: "https://xn--jorgedueas-09a.com/login-google/",
+          //   ux_mode: "redirect",
+          //   login_uri: "https://xn--jorgedueas-09a.com/login-google/",
         });
         google.accounts.id.renderButton(
-          document.getElementById("buttonDiv"),
-          { theme: "outline", size: "large" } // customization attributes
+          document.getElementById("buttonDiv")
+          // { theme: "outline", size: "large" } // customization attributes
         );
         // google.accounts.id.prompt(); // also display the One Tap dialog
       };
