update: test login google

--- a/login-google/index.html
+++ b/login-google/index.html
@@ -25,8 +25,8 @@
           //   login_uri: "https://xn--jorgedueas-09a.com/login-google/",
         });
         google.accounts.id.renderButton(
-          document.getElementById("buttonDiv")
-          // { theme: "outline", size: "large" } // customization attributes
+          document.getElementById("buttonDiv"),
+          { theme: "outline", size: "large" } // customization attributes
         );
         // google.accounts.id.prompt(); // also display the One Tap dialog
       };
