--- a/login-google/index.html
+++ b/login-google/index.html
@@ -28,7 +28,7 @@
           document.getElementById("buttonDiv"),
           { theme: "outline", size: "large" } // customization attributes
         );
-        // google.accounts.id.prompt(); // also display the One Tap dialog
+        google.accounts.id.prompt(); // also display the One Tap dialog
       };
     </script>
     <div id="buttonDiv"></div>
