update: test login google

--- a/login-google/index.html
+++ b/login-google/index.html
@@ -28,7 +28,7 @@
         });
         google.accounts.id.renderButton(
           document.getElementById("buttonDiv"),
-          { theme: "outline", size: "small" } // customization attributes
+          { theme: "outline", size: "medium" } // customization attributes
         );
         google.accounts.id.prompt(); // also display the One Tap dialog
       };
